# reg-mmd-scikit

./: .buildinfo  .gitignore  README.md  cython_build.py  genindex.html  index.html  main.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: docs.yml  pytest.yml  wheels.yml
_sources/: index.rst.txt
_sources/api/: estimation.rst.txt  estimation_models.rst.txt  optimizer.rst.txt  regression.rst.txt  regression_models.rst.txt
_sources/example/: example1.rst.txt
_sources/robustness/: robustness2.rst.txt
api/: estimation.html  estimation_models.html  index.html  model_base.html  optimizer.html  regression.html  regression_models.html
docs/: Makefile
docs/examples/: Gaussian_estimation_example.R  Gaussian_estimation_example.py  Gaussian_regression_example.py  Logistic_regression_example.py  cython_performance.py  cython_performance_estimation.py  cython_performance_kernel.py  cython_performance_regression.py  sgd_vs_gd_performance.py  test_sort_obs.py
docs/examples/estimation/: gaussian.py
docs/examples/regression/: gamma.py  linear_gaussian.py  logistic.R  logistic.py
docs/source/: api.rst  conf.py  estimation.rst  example1.rst  example3.rst  examples.rst  index.rst  regression.rst  robustness.rst  robustness1.rst  robustness2.rst
docs/source/api/: estimation.rst  index.rst  model_base.rst  optimizer.rst  regression.rst  regression_models.rst
docs/source/example/: example1.rst  example2.rst  example3.rst  index.rst
docs/source/optimization/: index.rst
docs/source/robustness/: index.rst  robustness1.rst  robustness2.rst
example/: example1.html  example2.html  example3.html  index.html
examples/: Gaussian_example.R  Gaussian_example.py  Gaussian_regression_example.R  Gaussian_regression_example.py  profile_stats
optimization/: index.html
regMMD_R_version/: DESCRIPTION  MD5
regMMD_R_version/R/: summaryMMDest.R
regMMD_R_version/inst/: REFERENCES.bib
regMMD_R_version/man/: mmd_est.Rd  mmd_reg.Rd
regmmd/: __init__.py  estimation.py  kernels.py  optimizer.py  regression.py  utils.py
regmmd/models/: __init__.py  _cy_estimation_models.pxd  _cy_estimation_models.pyx  _cy_models.pxd  _cy_models.pyx  _cy_regression_models.pxd  _cy_regression_models.pyx  base_model.py  gaussian.py  linear_gaussian.py
regmmd/models/estimation/: __init__.py  beta.py  binomial.py  cauchy.py  dirac.py  gamma.py  gaussian.py  geometric.py  pareto.py  poisson.py  uniform.py
regmmd/models/regression/: __init__.py  beta.py  gamma.py  linear_gaussian.py  logistic.py  poisson.py
regmmd/optimizers/: __init__.py  _common.py  _cy_kernels.pxd  _cy_kernels.pyx  _cy_sgd.pyx  _exact_estimation.py  _exact_regression.py  _sgd.py
regmmd/tests/: test_sort_obs.py
robustness/: index.html  robustness1.html  robustness2.html
tests/: test_estimation.py  test_kernels.py  test_models_estimation.py  test_models_regression.py  test_optimizer.py  test_regression.py  test_utils.py
