[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "regmmd"
version = "0.1.0"
authors = [
    { name="Hidde Fokkema", email="hidde.fokkema@gmail.com" }
]
description = "A Python implementation of the regMMD estimator and regressor with a Scikit-Learn interface"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
dependencies = [
    "numpy>=1.24.1",
    "scipy>=1.10.0",
    "joblib>=1.3.0",
    "threadpoolctl>=3.2.0",
    "scikit-learn>=1.8.0",
    "ruff>=0.14.10",
]

[project.optional-dependencies]
docs = [
    "sphinx>=9.0.4"
]
# examples = [""]
tests = [
    "pytest>=9.0.2",
    "ruff>=0.14.10"
]

[tool.setuptools]
packages = ["regmmd"]


[tool.ruff] 
line-length = 88
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".vscode",
    "__pycache__",
    "build",
    "dist",
    "sklearn/externals",
    "doc/_build",
    "doc/auto_examples",
    "asv_benchmarks/env",
    "asv_benchmarks/html",
    "asv_benchmarks/results",
    "asv_benchmarks/benchmarks/cache",
]

[tool.ruff.lint]
# all rules can be found here: https://beta.ruff.rs/docs/rules/
select = ["E", "F", "W", "I"]
ignore=[
    # space before : (needed for how black formats slicing)
    "E203",
    # do not assign a lambda expression, use a def
    "E731",
    # do not use variables named 'l', 'O', or 'I'
    "E741",
]
