[build-system]
requires = ["setuptools>=61.0.0", "Cython>=3.0", "numpy>=2.0", "wheel", "scipy>=1.11"]
build-backend = "setuptools.build_meta"

[project]
name = "regmmd"
version = "0.1.1"
authors = [
    { name="Hidde Fokkema", email="hidde.fokkema@gmail.com" }
]
description = "A Python implementation of the regMMD estimator and regressor with a Scikit-Learn interface"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
dependencies = [
    "numpy>=1.24.1",
    "scipy>=1.10.0",
    "joblib>=1.3.0",
    "threadpoolctl>=3.2.0",
    "scikit-learn>=1.8.0",
    "cython>=3.2.4",
]

# these are installed using uv sync --dev/ uv sync --group test, uv sync --group docs
[dependency-groups]
dev = [
    {include-group = "test"},
    {include-group = "docs"}
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "genbadge[coverage]>=1.1.3"
]
docs = [
    "ruff>=0.14.10",
    "sphinx>=9.0.4",
    "pydata-sphinx-theme>=0.16.1",
    "matplotlib>=3.10.8",
]

[tool.setuptools.packages.find]
include = ["regmmd*"]

[tool.ruff] 
line-length = 88
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".vscode",
    "__pycache__",
    "build",
    "dist",
    "sklearn/externals",
    "doc/_build",
    "doc/auto_examples",
    "asv_benchmarks/env",
    "asv_benchmarks/html",
    "asv_benchmarks/results",
    "asv_benchmarks/benchmarks/cache",
]

[tool.ruff.lint]
# all rules can be found here: https://beta.ruff.rs/docs/rules/
select = ["E", "F", "W", "I"]
ignore=[
    # space before : (needed for how black formats slicing)
    "E203",
    # do not assign a lambda expression, use a def
    "E731",
    # do not use variables named 'l', 'O', or 'I'
    "E741",
    # Import block warnigs
    "I001"
]


[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
